# JWT_Assignment

./: README.md
myauth/: pyproject.toml  test.db
myauth/src/myauth/: auth.py  database.py  main.py  models.py  schema.py
